src/objects/Multi_Step_Loan_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Multi Step Loan Setup</relationshipLabel>
        <relationshipName>Multi_Step_Loan_Setup</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Multi Step Loan Setup</relationshipLabel>
        <relationshipName>Multi_Step_Loan_Setup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Change_Date_Next__c</fullName>
        <defaultValue>DATE(3100, 12, 31)</defaultValue>
        <description>Next Rate change date, used for processing only, please do not display it on UI</description>
        <label>Next Rate Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Multi Step Loan Setup</label>
    <nameField>
        <displayFormat>MSLSID-{0000000000}</displayFormat>
        <label>Multi Step Loan Setup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multi Step Loan Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>